--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "sburriesci.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sburriesci
-
+linkedin_username: sarakelley
 # Build settings
 theme: minima
 plugins:
