--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,15 @@ url: "sburriesci.github.io" # the base hostname & protocol for your site, e.g. h
 github_username:  sburriesci
 linkedin_username: sarakelley
 # Build settings
-theme: minima
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
+  - jekyll-remote-theme
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
   - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
